--- a/app/src/main/res/values/filter_styles.xml
+++ b/app/src/main/res/values/filter_styles.xml
@@ -36,9 +36,12 @@
     <style name="filter_header">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">5dp</item>
         <item name="android:textColor">@color/gray</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="filter_icon" parent="filter_header">
+        <item name="android:layout_marginRight">5dp</item>
     </style>
 
     <style name="filter_divider">
@@ -46,5 +49,13 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/gray</item>
         <item name="android:layout_marginBottom">5dp</item>
+    </style>
+
+    <style name="filter_header_container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">5dp</item>
     </style>
 </resources>
