Changing some copy

--- a/app/src/main/res/values/locations_strings.xml
+++ b/app/src/main/res/values/locations_strings.xml
@@ -11,12 +11,12 @@
 
     <string name="location_added">Location added. Would you like to set it as your current location?</string>
     <string name="location_deleted">Location deleted.</string>
-    <string name="location_changed">Location changed.</string>
+    <string name="location_edited">Location edited.</string>
 
     <string name="empty_location">Locations can\'t be empty.</string>
     <string name="duplicate_location">You already have this location.</string>
 
     <string name="set_as_current">Set as current location</string>
-    <string name="change_location">Change location</string>
+    <string name="edit_location">Edit location</string>
     <string name="delete_location">Delete location</string>
 </resources>
