Do not require location, process permission grant properly, prepend call to phone number

--- a/app/src/main/res/values/restaurant_strings.xml
+++ b/app/src/main/res/values/restaurant_strings.xml
@@ -6,6 +6,7 @@
     <string name="share_restaurant">Share restaurant info</string>
     <string name="load_random_restaurant">Load random restaurant</string>
 
+    <string name="call">Call&#160;</string>
     <string name="navigate_with">Navigate with</string>
     <string name="call_with">Call with</string>
     <string name="share_with">Share restaurant info with</string>
