--- a/app/src/main/res/layout/restaurant_container.xml
+++ b/app/src/main/res/layout/restaurant_container.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <com.rey.material.widget.Button
         android:id="@+id/start_navigation"
