--- a/app/src/main/res/layout/restaurant_cell.xml
+++ b/app/src/main/res/layout/restaurant_cell.xml
@@ -27,7 +27,7 @@
             android:textColor="@color/dark_gray"/>
 
         <TextView
-            android:id="@+id/categories"
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
