--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -43,4 +43,10 @@
     <string name="remove_all_filters">Are you sure you want to remove all of your current filters?</string>
 
     <string name="filters_updated">Your filters have been updated.</string>
+
+    <!-- Favorites -->
+    <string name="categories_hint">What kinds of food are you craving right now?</string>
+
+    <string name="location_icon">{ion-location}</string>
+    <string name="cities_hint">What cities are you interested in?</string>
 </resources>
