--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -52,4 +52,5 @@
     <string name="search">Search</string>
     <string name="no_prefix_matches">No results to display.</string>
     <string name="confirm_choices">Confirm choices</string>
+    <string name="filters_applied">Your filters have been applied.</string>
 </resources>
