--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -11,27 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:padding="10dp">
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="12dp">
 
         <EditText
             android:id="@+id/search_term"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/search_hint"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:layout_marginTop="0dp"
-            style="@style/text_input"/>
+            android:layout_marginLeft="26dp"
+            android:paddingRight="32dp"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:textSize="18dp"
+            android:textColor="@color/dark_gray"
+            android:textColorHint="@color/gray"
+            style="@style/filter_input"/>
 
         <com.joanzapata.iconify.widget.IconTextView
             android:text="@string/search_icon"
-            android:layout_marginTop="0dp"
-            style="@style/input_icon"/>
+            style="@style/filter_input_icon"/>
 
         <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/clear_search"
             android:text="@string/clear_icon"
-            android:layout_marginTop="0dp"
             android:layout_gravity="center_vertical|right"
-            style="@style/input_icon"/>
+            android:layout_marginRight="6dp"
+            style="@style/filter_input_icon"/>
     </FrameLayout>
 
     <View
@@ -46,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/search_divider"
-        android:padding="5dp"
+        android:padding="4dp"
         android:clipToPadding="false">
 
         <LinearLayout
