--- a/app/src/main/res/layout/location_cell.xml
+++ b/app/src/main/res/layout/location_cell.xml
@@ -2,7 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <com.joanzapata.iconify.widget.IconTextView
         android:id="@+id/list_icon"
