--- a/app/src/main/res/layout/my_locations.xml
+++ b/app/src/main/res/layout/my_locations.xml
@@ -10,13 +10,15 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
         android:focusableInTouchMode="true"
         android:focusable="true">
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/add_location"
@@ -55,7 +57,7 @@
             android:id="@+id/no_locations"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="16dp"
             android:visibility="gone"
             android:textSize="28sp"
             android:textColor="@color/dark_gray"
@@ -65,6 +67,7 @@
 
         <ListView
             android:id="@+id/locations"
+            android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
