--- a/app/src/main/res/layout/select_options.xml
+++ b/app/src/main/res/layout/select_options.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:orientation="vertical"
     android:background="@color/white"
     android:focusable="true"
@@ -12,7 +11,10 @@
     <FrameLayout
         android:id="@+id/search_term_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
 
         <EditText
             android:id="@+id/search_term"
@@ -48,7 +50,7 @@
 
     <ListView
         android:id="@+id/content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
