--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,23 +33,21 @@
     </style>
 
     <style name="action_icon">
-        <item name="android:padding">10dp</item>
         <item name="android:textColor">@color/dark_gray</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">32dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:textSize">28dp</item>
         <item name="android:layout_centerVertical">true</item>
     </style>
 
     <style name="action_item">
-        <item name="android:layout_marginLeft">10dp</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingBottom">10dp</item>
-        <item name="android:textColor">@color/dark_gray</item>
-        <item name="android:layout_centerVertical">true</item>
-        <item name="android:textSize">22dp</item>
+        <item name="android:layout_marginRight">12dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:textColor">@color/dark_gray</item>
     </style>
 
     <style name="text_input">
