--- a/app/src/main/res/layout/favorites_filter.xml
+++ b/app/src/main/res/layout/favorites_filter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/gray_200"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,71 +9,58 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="8dp">
 
-        <android.support.v7.widget.CardView
-            style="@style/filter_card"
-            android:layout_marginTop="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            <LinearLayout style="@style/favorites_header_container">
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/categories_icon"
+                    style="@style/favorites_filter_icon"/>
 
-                <LinearLayout style="@style/filter_header_container">
-                    <com.joanzapata.iconify.widget.IconTextView
-                        style="@style/filter_icon"
-                        android:text="@string/categories_icon"/>
-
-                    <TextView
-                        style="@style/filter_header"
-                        android:text="@string/categories"/>
-                </LinearLayout>
-
-                <View style="@style/filter_divider"/>
-
-                <EditText
-                    android:id="@+id/categories_input"
-                    android:hint="@string/categories_hint"
-                    android:singleLine="false"
-                    android:lines="3"
-                    android:layout_margin="5dp"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    style="@style/text_input"/>
+                <TextView
+                    android:text="@string/categories"
+                    style="@style/favorites_filter_header"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            style="@style/filter_card"
-            android:layout_marginTop="5dp">
+            <EditText
+                android:id="@+id/categories_input"
+                android:hint="@string/categories_hint"
+                android:singleLine="false"
+                android:lines="3"
+                android:layout_margin="5dp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                style="@style/text_input"/>
+        </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
 
-                <LinearLayout style="@style/filter_header_container">
-                    <com.joanzapata.iconify.widget.IconTextView
-                        style="@style/filter_icon"
-                        android:text="@string/location_icon"/>
+            <LinearLayout style="@style/favorites_header_container">
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/location_icon"
+                    style="@style/favorites_filter_icon"/>
 
-                    <TextView
-                        style="@style/filter_header"
-                        android:text="@string/location"/>
-                </LinearLayout>
-
-                <View style="@style/filter_divider"/>
-
-                <EditText
-                    android:id="@+id/cities_input"
-                    android:hint="@string/cities_hint"
-                    android:layout_margin="5dp"
-                    android:singleLine="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    style="@style/text_input"/>
+                <TextView
+                    android:text="@string/location"
+                    style="@style/favorites_filter_header"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+
+            <EditText
+                android:id="@+id/cities_input"
+                android:hint="@string/cities_hint"
+                android:layout_margin="5dp"
+                android:singleLine="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                style="@style/text_input"/>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
