--- a/app/src/main/res/layout/restaurant_cell.xml
+++ b/app/src/main/res/layout/restaurant_cell.xml
@@ -4,12 +4,12 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/restaurant_picture"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="center_vertical"/>
 
     <LinearLayout
@@ -23,14 +23,14 @@
             android:id="@+id/restaurant_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="17dp"
             android:textColor="@color/dark_gray"/>
 
         <TextView
             android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="13dp"
             android:textColor="@color/gray_600"/>
     </LinearLayout>
 </LinearLayout>
