--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -34,10 +34,11 @@
     <string name="far">Far (&lt; 5 miles away)</string>
     <string name="very_far">Very far (5+ miles away)</string>
 
-    <!-- Deals -->
-    <string name="deals_icon">{ion-pricetags}</string>
-    <string name="deals">Deals</string>
+    <!-- Additional Settings -->
+    <string name="additional_settings">Additional Settings</string>
+    <string name="gears_icon">{fa-gears}</string>
     <string name="deals_only">Only show places with deals</string>
+    <string name="randomize_results">Randomize results</string>
 
     <string name="clear_confirmation">Clear Confirmation</string>
     <string name="remove_all_filters">Are you sure you want to remove all of your current filters?</string>
