--- a/app/src/main/res/values/filter_styles.xml
+++ b/app/src/main/res/values/filter_styles.xml
@@ -27,7 +27,7 @@
         <item name="android:textSize">20dp</item>
     </style>
 
-    <style name="checkbox_style">
+    <style name="filter_checkbox">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_gravity">right|center_vertical</item>
