--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -378,6 +378,68 @@
                         <LinearLayout style="@style/filter_header_container">
                             <com.joanzapata.iconify.widget.IconTextView
                                 style="@style/filter_icon"
+                                android:text="@string/sort_icon"/>
+
+                            <TextView
+                                style="@style/filter_header"
+                                android:text="@string/sort_by"/>
+                        </LinearLayout>
+
+                        <View style="@style/filter_divider"/>
+
+                        <FrameLayout
+                            android:id="@+id/relevance_sort"
+                            style="@style/filter_field_container">
+
+                            <TextView
+                                android:text="@string/relevance"
+                                style="@style/filter_field_text"/>
+
+                            <com.rey.material.widget.CheckBox
+                                android:id="@+id/relevance_toggle"
+                                style="@style/filter_checkbox"/>
+                        </FrameLayout>
+
+                        <FrameLayout
+                            android:id="@+id/distance_sort"
+                            style="@style/filter_field_container">
+
+                            <TextView
+                                android:text="@string/distance"
+                                style="@style/filter_field_text"/>
+
+                            <com.rey.material.widget.CheckBox
+                                android:id="@+id/distance_toggle"
+                                style="@style/filter_checkbox"/>
+                        </FrameLayout>
+
+                        <FrameLayout
+                            android:id="@+id/rating_sort"
+                            style="@style/filter_field_container">
+
+                            <TextView
+                                android:text="@string/rating"
+                                style="@style/filter_field_text"/>
+
+                            <com.rey.material.widget.CheckBox
+                                android:id="@+id/rating_toggle"
+                                style="@style/filter_checkbox"/>
+                        </FrameLayout>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    style="@style/filter_card"
+                    android:layout_marginTop="4dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout style="@style/filter_header_container">
+                            <com.joanzapata.iconify.widget.IconTextView
+                                style="@style/filter_icon"
                                 android:text="@string/gears_icon"/>
 
                             <TextView
