--- a/app/src/main/res/values/settings_strings.xml
+++ b/app/src/main/res/values/settings_strings.xml
@@ -8,7 +8,7 @@
         <item>@string/my_other_apps</item>
         <item>@string/rate_this_app</item>
     </array>
-    <string name="feedback_subject">Food Button Feedback</string>
+    <string name="feedback_subject">Simple Restaurant Finder Feedback</string>
     <string name="send_email">Send email</string>
 
     <string name="email_icon">{ion-email}</string>
