--- a/app/src/main/res/layout/food_button.xml
+++ b/app/src/main/res/layout/food_button.xml
@@ -5,17 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:padding="16dp"
     >
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/food_button"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         style="@style/giant_fab"
         />
 
     <ImageView
         android:id="@+id/powered_by_yelp"
+        android:layout_marginTop="32dp"
         style="@style/powered_by_yelp"
         />
 </LinearLayout>
